apps/staging/webtop/ingress.yaml
# optional if i want external access later
# enable in kustomize

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtop
  namespace: webtop
spec:
  ingressClassName: traefik
  rules:
    - host: webtop.oskcloud.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webtop
                port:
                  number: 3002
